# cmake-production-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.h.in  validation_output.txt
.github/workflows/: ci.yml  docs.yml  release.yml
Docs/: Doxyfile.in  Execution.md  Final.md  How-to.md  Plan.md  To-do.md  Walk-Through.md
benchmarks/: CMakeLists.txt
cmake/: MyProjectConfig.cmake.in  Utils.cmake  compiler.cmake  dependencies.cmake  features.h.in  install.cmake  options.cmake  packaging.cmake  platform.cmake  testing.cmake
examples/: CMakeLists.txt
scripts/: clean.sh  format.sh  init_project.sh  run-tests.sh  validate.sh
src/: CMakeLists.txt
src/app/: main.cpp
src/core/include/myproject/core/: types.h  version.h
src/core/src/: version.cpp
src/network/include/myproject/network/: server.h
src/network/include/network/: server.h
src/network/src/: server.cpp
test-install/include/myproject/core/: types.h  version.h
test-install/share/doc/MyProject/: README.md
tests/: CMakeLists.txt  test_smoke.cpp
tests/core/: test_core.cpp
tests/network/: test_network.cpp
